--- a/src/app/ui/checkbox/checkbox/checkbox.component.html
+++ b/src/app/ui/checkbox/checkbox/checkbox.component.html
@@ -1,1 +1,8 @@
-<div class="checkbox__checkbox"></div> <div class="checkbox__label"><ng-content></ng-content></div>
+<div class="checkbox__checkbox">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+    <path d="M20.285 2l-11.285 11.567-5.286-5.011-3.714 3.716 9 8.728 15-15.285z"/>
+  </svg>
+</div>
+<div class="checkbox__label">
+  <ng-content></ng-content>
+</div>
