fix class for capture focus

--- a/src/app/demo/dialog-demo/dialog-demo/dialog-demo.component.html
+++ b/src/app/demo/dialog-demo/dialog-demo/dialog-demo.component.html
@@ -15,8 +15,8 @@
   <app-my-dialog title="Template Dialog"></app-my-dialog>
 </ng-template>
 
-<ng-template iwDialog #myDialog2="iw-dialog" [escToClose]="true" containerClass="double-config-demo">
-  <h2>Focus is caputed</h2>
+<ng-template iwDialog #myDialog2="iw-dialog" [escToClose]="true">
+  <h2>Focus is captured</h2>
   <input type="text" />
   <input type="text" />
   <input type="text" />
