--- a/src/app/ui/tooltip/tooltip-container/tooltip-container.component.scss
+++ b/src/app/ui/tooltip/tooltip-container/tooltip-container.component.scss
@@ -2,9 +2,35 @@ iw-tooltip-container {
   z-index: 6;
   position: absolute;
   display: block;
-  background: black;
-  color: white;
   padding: 5px;
-  font-size: 0.6rem;
-  border-radius: 3px;
+
+  .tooltip-container__content {
+    border-radius: 3px;
+    color: white;
+    padding: 5px;
+    background: black;    
+  }
+
+  &:after {
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(0, 0, 0, 0);
+    border-width: 5px;
+    margin-left: -5px;
+  }
+
+  &.iw-tooltip-container--bottom:after {
+    bottom: calc(100% - 5px);
+    border-bottom-color: #000000;
+  }
+
+  &.iw-tooltip-container--top:after {
+    top: calc(100% - 5px);
+    border-top-color: #000000;
+  }
 }
