--- a/src/app/demo/popover/popover-demo/popover-demo.component.html
+++ b/src/app/demo/popover/popover-demo/popover-demo.component.html
@@ -11,13 +11,13 @@
   </ng-template>
 </p>
 <hr/>
-<button (click)="isPopoverOpen3 = true">
+<button (click)="isPopoverOpen3 = true" id="pop1">
   Click to open!
 </button>
 
 <h2>Click outside to close: No, Esc to close: No</h2>
 
-<button (click)="isPopoverOpen2 = true">
+<button (click)="isPopoverOpen2 = true" id="pop2">
   Click to open!
 
   <ng-template iwPopover 
