--- a/src/app/demo/popover/custom-popover-demo/custom-popover-demo.component.html
+++ b/src/app/demo/popover/custom-popover-demo/custom-popover-demo.component.html
@@ -1,6 +1,6 @@
 <div class="custom-popover--header">
   <div class="custom-popover--header-content">
-    <ng-content select="app-custom-popover-header"></ng-content>
+    <ng-content select="appCustomPopoverHeader"></ng-content>
   </div>
   <a class="custom-popover--close-button" (click)="_close()">x</a>
 </div>
