--- a/src/app/demo/popover/property-edit-popover/property-edit-popover.component.html
+++ b/src/app/demo/popover/property-edit-popover/property-edit-popover.component.html
@@ -1,6 +1,6 @@
 <app-custom-popover-demo (close)="close()">
-  <app-custom-popover-header>Edit</app-custom-popover-header>
-  <app-custom-popover-content>    
+  <div appCustomPopoverHeader>Edit</div>
+  <div appCustomPopoverContent>    
     {{propertyName}}: <input autofocus autocomplete="false" [ngModel]="value" (ngModelChange)="onValueChange.emit($event)" type="text"/>
-  </app-custom-popover-content>
+  </div>
 </app-custom-popover-demo>
