--- a/src/app/ui/tooltip/tooltip-container/tooltip-container.component.scss
+++ b/src/app/ui/tooltip/tooltip-container/tooltip-container.component.scss
@@ -1,8 +1,10 @@
+$inner-padding: 50px;
+
 iw-tooltip-container {
   z-index: 6;
   position: absolute;
   display: block;
-  padding: 5px;
+  padding: $inner-padding;
 
   .tooltip-container__content {
     border-radius: 3px;
@@ -13,24 +15,22 @@ iw-tooltip-container {
 
   &:after {
     left: 50%;
-    border: solid transparent;
+    border: $inner-padding solid transparent;
     content: " ";
     height: 0;
     width: 0;
     position: absolute;
     pointer-events: none;
-    border-color: rgba(0, 0, 0, 0);
-    border-width: 5px;
-    margin-left: -5px;
+    margin-left: -$inner-padding;
   }
 
   &.iw-tooltip-container--bottom:after {
-    bottom: calc(100% - 5px);
-    border-bottom-color: #000000;
+    bottom: calc(100% - #{$inner-padding});
+    border-bottom-color: black;
   }
 
   &.iw-tooltip-container--top:after {
-    top: calc(100% - 5px);
-    border-top-color: #000000;
+    top: calc(100% - #{$inner-padding});
+    border-top-color: black;
   }
 }
