feat(tooltip): add horizontal position handling

--- a/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
+++ b/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
@@ -28,3 +28,11 @@
     Set to {{t}}
   </ng-template>
 </button>
+
+<h2>Horizontal</h2>
+<button>
+  horizontal 
+  <ng-template iwTooltip containerClass="custom-tooltip-container" [horizontal]="true">
+    horizontal
+  </ng-template>
+</button>
