chore(demo): fix demo

--- a/src/app/demo/popover/popover-demo/popover-demo.component.html
+++ b/src/app/demo/popover/popover-demo/popover-demo.component.html
@@ -27,7 +27,7 @@
     popoverClass="popover-demo"
     (shouldClose)="isPopoverOpen2 = false">
     <app-custom-popover-demo (close)="isPopoverOpen2 = false">
-      <div appCustomPopoverHeader>Popover</div>
+      <div custom-popover-header>Popover</div>
       <div appCustomPopoverContent>    
         Click, or Esc, I won't close!
       </div>
@@ -45,8 +45,8 @@
     popoverClass="popover-demo"
     (shouldClose)="isPopoverOpen = false">
     <app-custom-popover-demo (close)="isPopoverOpen = false">
-      <div appCustomPopoverHeader>Popover</div>
-      <div appCustomPopoverContent>    
+      <div custom-popover-header>Popover</div>
+      <div custom-popover-content>    
         Hello World! I'm popping over!
       </div>
     </app-custom-popover-demo>
