--- a/src/app/demo/popover/custom-popover-demo/custom-popover-demo.component.html
+++ b/src/app/demo/popover/custom-popover-demo/custom-popover-demo.component.html
@@ -1,10 +1,10 @@
 <div class="custom-popover--header">
   <div class="custom-popover--header-content">
-    <ng-content select="appCustomPopoverHeader"></ng-content>
+    <ng-content select="[custom-popover-header]"></ng-content>
   </div>
   <a class="custom-popover--close-button" (click)="_close()">x</a>
 </div>
 
 <div class="custom-popover--content">
-  <ng-content select="app-custom-popover-content"></ng-content>  
+  <ng-content select="[custom-popover-content]"></ng-content>  
 </div>
