first commit for form control

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
     <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
     <li><a routerLinkActive="active-link" routerLink="/dialog">Dialog</a></li>
     <li><a routerLinkActive="active-link" routerLink="/checkbox">Checkbox</a></li>
+    <li><a routerLinkActive="active-link" routerLink="/form-control">Form Control</a></li>
   </ul>
 </aside>
 
