fix(checkbox): fix write value that does not trigger change detection

--- a/src/app/demo/checkbox-demo/checkbox-demo.component.html
+++ b/src/app/demo/checkbox-demo/checkbox-demo.component.html
@@ -2,8 +2,8 @@
 
 <h2>Basic usage</h2>
 
-<iw-checkbox [(ngModel)]="someValue">Yoooo</iw-checkbox>
-<iw-checkbox [(ngModel)]="someValue" [disabled]="true">Ya</iw-checkbox>
+<iw-checkbox [(ngModel)]="value1">Yoooo</iw-checkbox>
+<iw-checkbox [(ngModel)]="value1" [disabled]="true">Ya</iw-checkbox>
 <iw-checkbox>Yu</iw-checkbox>
 <iw-checkbox>Yi</iw-checkbox>
 
