refactor(docs): use compodoc to get automatically generated documentation

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -9,8 +9,8 @@
     <li><a routerLinkActive="active-link" routerLink="/popover">Popover</a></li>
     <li><a routerLinkActive="active-link" routerLink="/tooltip">Tooltip</a></li>
     <li><a routerLinkActive="active-link" routerLink="/dialog">Dialog</a></li>
-    <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
-    <li><a href="https://github.com/interfacewerk/iwerk-angular-ui"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+    <!-- <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li> -->
+    <li><a href="https://github.com/interfacewerk/iwerk-angular-ui"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
     <li><a href="https://interfacewerk.de">interfacewerk.de</a></li>
   </ul>
 </aside>
