feat(multiline-ellipsis): implement multi-line ellipsis feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
       routerLinkActive="active-link">
       Get Started
     </a></li>
+    <li><a routerLinkActive="active-link" routerLink="/ellipsis">Ellipsis</a></li>
     <li><a routerLinkActive="active-link" routerLink="/popover">Popover</a></li>
     <li><a routerLinkActive="active-link" routerLink="/tooltip">Tooltip</a></li>
     <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
