docs(demo): lato font and tooltip for code sampe copy button

--- a/projects/demo/src/app/core/component-example/component-example.component.html
+++ b/projects/demo/src/app/core/component-example/component-example.component.html
@@ -4,5 +4,8 @@
 
 <div class="source">
   <pre *ngIf="example.source"><code #code>{{ example.source }}</code></pre>
-  <button class="copy" (click)="copy()"><fa-icon [icon]="faCopy"></fa-icon></button>
+  <button class="copy" (click)="copy()">
+    <fa-icon [icon]="faCopy"></fa-icon>
+    <ng-template iwTooltip [horizontal]="true">Copy this code sample</ng-template>
+  </button>
 </div>
