--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./styles/variables";
 @import "./styles/button";
 @import "./styles/font-awesome-4.7.0/scss/font-awesome";
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 html {
   font-size: 10px;
