docs(demo): add hiring link

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -12,6 +12,7 @@
     <li><a routerLinkActive="active-link" routerLink="/ellipsis">Ellipsis</a></li>
     <!-- <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li> -->
     <li><a href="https://github.com/interfacewerk/iwerk-angular-ui"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
+    <li><a href="https://interfacewerk.de/jobs"><fa-icon [icon]="faHandshake"></fa-icon> We are hiring!</a></li>
     <li><a href="https://interfacewerk.de">interfacewerk.de</a></li>
   </ul>
 </aside>
