docs(tooltip, directive, example): add tooltip for copy button and notification and add instructions

--- a/projects/demo/src/app/core/component-example/component-example.component.html
+++ b/projects/demo/src/app/core/component-example/component-example.component.html
@@ -4,8 +4,11 @@
 
 <div class="source">
   <pre *ngIf="example.source"><code #code>{{ example.source }}</code></pre>
-  <button class="copy" (click)="copy()">
-    <fa-icon [icon]="faCopy"></fa-icon>
-    <ng-template iwTooltip [horizontal]="true">Copy this code sample</ng-template>
-  </button>
+  <div class="source-actions">
+    <button class="copy" (click)="copy()">
+      <fa-icon [icon]="faCopy"></fa-icon>
+      <ng-template iwTooltip [horizontal]="true">Copy this code sample</ng-template>
+    </button>
+    <div *ngIf="copied" class="copied">Copied!</div>
+  </div>
 </div>
