--- a/projects/demo/src/app/core/component-example/component-example.component.scss
+++ b/projects/demo/src/app/core/component-example/component-example.component.scss
@@ -11,14 +11,22 @@ pre {
     position: relative;
 }
 
-.copy {
+.source-actions {
     position: absolute;
-    right: 5px;
-    top: 5px;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 5px 15px;
+}
+
+.copy {
     outline: none;
     background: none;
     box-shadow: none;
     color: grey;
+    padding: 0;
 
     &:hover {
         color: black;
