feat(navigation): implement navigation component

--- a/projects/demo/src/app/core/component-description/component-description.component.html
+++ b/projects/demo/src/app/core/component-description/component-description.component.html
@@ -1,1 +1,1 @@
-<div class="" [innerHTML]="componentId | componentDescription: componentType"></div>
+<div [innerHTML]="componentId | componentDescription: componentType"></div>
