--- a/projects/demo/src/app/core/component-documentation/component-documentation.component.html
+++ b/projects/demo/src/app/core/component-documentation/component-documentation.component.html
@@ -12,7 +12,7 @@
   <app-component-description
     appAnchor="overview"
     [componentId]="componentId"
-    [componentType]="'directives'"
+    [componentType]="componentType"
   ></app-component-description>
 
   <h2 appAnchor="examples">Examples</h2>
@@ -24,7 +24,7 @@
   
   <app-component-api
     [componentId]="componentId"
-    [componentType]="'directives'"
+    [componentType]="componentType"
   ></app-component-api>
   
 </div>
