--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
     <li><a routerLinkActive="active-link" routerLink="/dialog">Dialog</a></li>
     <li><a routerLinkActive="active-link" routerLink="/checkbox">Checkbox</a></li>
+    <li><a routerLinkActive="active-link" routerLink="/navigation">Navigation</a></li>
   </ul>
 </aside>
 
