--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
-<docs-app [brandLogo]="'/assets/logo.svg'">
+<docs-app [brandLogo]="'assets/logo.svg'">
   <li><a href="https://github.com/interfacewerk/iwerk-angular-ui"><i class="fa fa-github" aria-hidden="true"></i> Github</a></li>
   <li><a href="https://interfacewerk.de/jobs"><fa-icon [icon]="faHandshake"></fa-icon> We are hiring!</a></li>
   <li><a href="https://interfacewerk.de">interfacewerk.de</a></li>
