--- a/src/styles.sass
+++ b/src/styles.sass
@@ -13,10 +13,6 @@ html, body
 a
   text-decoration: underline
   outline: none
-  color: white
-  
-  &:visited, &:focus, &:hover
-    color: white
 
   &:hover
     text-decoration: none
@@ -83,3 +79,32 @@ iw-tooltip-container.demo-tooltip
 
   &.iw-tooltip-container--top:after
     border-bottom-color: red
+
+iw-tree.routes-menu
+  ol
+    padding: 0
+    margin: 0
+
+  li
+    list-style: none
+    width: 100%
+    border-bottom: 1px solid #222
+    padding: 0
+
+    a
+      display: inline-block
+      width: 100%
+      height: 40px
+      line-height: 40px
+      text-decoration: none
+      padding: 0px 15px
+      color: white
+
+      &:visited, &:focus, &:hover
+        color: white
+
+      &:hover, &:focus
+        background: #222
+
+      &.active-link
+        background: grey
