fix(docs/search): fix style of search input

--- a/projects/docs/src/lib/menu/menu.component.sass
+++ b/projects/docs/src/lib/menu/menu.component.sass
@@ -3,13 +3,13 @@
 $search-color: $color-two
 
 .search
-  line-height: 40px
   height: 40px
-  padding: 0 15px
+  line-height: 14px
+  font-size: 14px
+  padding: 13.5px 15px
   width: 100%
   border-radius: 0
   color: $search-color
-  font-size: 1.4rem
   outline: none
   border: none
   border-top: $color-light-grey 1px solid
