fix(docs/code): fix copy button position

--- a/projects/docs/src/lib/core/code/code.component.sass
+++ b/projects/docs/src/lib/core/code/code.component.sass
@@ -1,14 +1,17 @@
 \:host
   position: relative
   display: block
+  height: 100%
+  overflow: auto
 
 pre
   margin: 0
   padding: 0
+  height: 100%
+  overflow: auto
   
   code
     margin: 0
-
 
 .source-actions
   position: absolute
