feat(docs): add Get Started page link

--- a/projects/docs/src/lib/docs/docs.component.sass
+++ b/projects/docs/src/lib/docs/docs.component.sass
@@ -8,17 +8,15 @@ docs-app
 
   $width_aside: 200px
 
-  ul li.app__logo
-    a
-      width: 100%
-      display: block
-      width: auto
-      position: relative
-      color: red
-      background-size: 100%
-      background-repeat: no-repeat
-
-    padding: 10px 15px
+  a.app__logo
+    width: calc(100% - 30px)
+    display: block
+    height: 50px
+    margin: 0 15px
+    position: relative
+    color: red
+    background-size: 100%
+    background-repeat: no-repeat
 
   aside
     position: absolute
