--- a/projects/demo/src/app/welcome/welcome.component.html
+++ b/projects/demo/src/app/welcome/welcome.component.html
@@ -1,15 +1,32 @@
 <h1>Interfacewerk Angular UI</h1>
 
 <h2><i class="fa fa-check-square-o" aria-hidden="true"></i> Production ready, highly customizable</h2>
-<p>This library is a set of interface tools that we use everyday in our Angular projects. They are designed as single blocks, easily customizable with CSS, opinionated
+<p>This library is a set of interface tools that we use everyday in our Angular projects. They are designed as single
+  blocks, easily customizable with CSS, opinionated
   components or directives.
 </p>
 
 <h2><i class="fa fa-check-square-o" aria-hidden="true"></i> AOT compatible</h2>
-<p>We keep this library up-to-date with the latest Angular capabilities. Therefore, we can use any of its component in your AOT ready projects.</p>
+<p>We keep this library up-to-date with the latest Angular capabilities. Therefore, we can use any of its component in
+  your AOT ready projects.</p>
 
 <h2><i class="fa fa-check-square-o" aria-hidden="true"></i> UX and performance</h2>
-<p>We develop this library with the user experience in mind. Therefore, interactions must be easy to understand and none of the components should affect
-  the performance. When working with other libraries, we often face the problem that, in huge tables, a simple tooltip on each cell could greatly impact
+<p>We develop this library with the user experience in mind. Therefore, interactions must be easy to understand and none
+  of the components should affect
+  the performance. When working with other libraries, we often face the problem that, in huge tables, a simple tooltip
+  on each cell could greatly impact
   the snappiness of the application.
 </p>
+
+<h2>Get Started</h2>
+
+<ol>
+  <li>
+    1. Install the package
+    <docs-code-line>{{ "npm install --save iwerk-angular-ui" }}</docs-code-line>
+  </li>
+  <li>
+    2. Import the modules you need to any of your modules
+    <docs-code-line>{{ "import { DialogModule } from 'iwerk-angular-ui';" }}</docs-code-line>
+  </li>
+</ol>
