--- a/projects/demo/src/app/ellipsis/ellipsis-example1/ellipsis-example1.component.html
+++ b/projects/demo/src/app/ellipsis/ellipsis-example1/ellipsis-example1.component.html
@@ -1,1 +1,4 @@
-<p class="ellipsis" [iwMultilineEllipsis]="text" style="max-height: 100px; max-width: 200px"></p>
+<p class="ellipsis"
+  [iwMultilineEllipsis]="text"
+  style="max-height: 100px; max-width: 200px"
+></p>
