fix(ellipsis): fix error where an exception was thrown when truncated event was used

--- a/src/app/demo/ellipsis/ellipsis.component.html
+++ b/src/app/demo/ellipsis/ellipsis.component.html
@@ -1,3 +1,6 @@
 <h1>Ellipsis</h1>
 
-<p [iwMultilineEllipsis]="lorem"></p>
+Height: <input type="number" [(ngModel)]="height" />
+Truncated: {{truncated ? 'Yes' : 'No'}}
+
+<p [iwMultilineEllipsis]="lorem" (truncated)="truncated = $event" [style.height.px]="height"></p>
