fix(popover): put popover container and arrow element as siblings of scroll mask
BREAKING CHANGE: The DOM structure changes: the container and the arrow are no longer children of
the scroll mask

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -28,12 +28,12 @@ iw-popover-container.popover-demo
     opacity: 1
 
 .iw-popover-arrow-element
-  position: absolute
+  position: fixed
   width: 10px
   height: 10px
   border-top: 1px solid grey
   border-right: 1px solid grey
-  z-index: 3
+  z-index: 4
 
   &.from-the-bottom
     transform: rotateZ(-45deg) translate(-7px, 0px)
