--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,15 +1,15 @@
-\:host
-  display: block
-  position: relative
-  width: 100%
-  height: 100%
+$width_aside: 200px
 
-  $width_aside: 200px
+\:host
+  display: flex
+  flex-direction: row
+  position: relative
+  width: 100vw
+  height: 100vh
+  overflow: hidden
 
   aside
-    position: absolute
-    top: 0
-    left: 0
+    flex: 0 0 auto
     height: 100%
     width: $width_aside
     overflow: auto
@@ -17,11 +17,11 @@
     color: white
     padding: 15px 0px
 
+    &.closed
+      display: none
+
   main
-    position: absolute
-    top: 0
-    left: $width_aside
+    flex: 1 1
     height: 100%
-    right: 0
     overflow: auto
     padding: 15px
