refactor(movable): create function that initializes logic to make handles

--- a/src/app/demo/movable-demo/movable-demo/movable-demo.component.html
+++ b/src/app/demo/movable-demo/movable-demo/movable-demo.component.html
@@ -11,3 +11,9 @@
     <ng-container [ngComponentOutlet]="movableDemoContentComponent"></ng-container>
   </div>
 </div>
+
+<div class="area">
+  <div class="target" iwMovable style="top: 20px; left: 40px;">
+    <ng-container [ngComponentOutlet]="movableDemoContent2Component"></ng-container>
+  </div>
+</div>
