fix(popover): the popover scroll mask prevents whole body scrolling

--- a/projects/demo/src/app/welcome/welcome.component.html
+++ b/projects/demo/src/app/welcome/welcome.component.html
@@ -26,6 +26,9 @@
     <docs-code-line>{{ "npm install --save iwerk-angular-ui" }}</docs-code-line>
   </li>
   <li>
+    2. Import the default styles in your angular.json or in your stylesheets.
+  </li>
+  <li>
     2. Import the modules you need to any of your modules
     <docs-code-line>{{ "import { DialogModule } from 'iwerk-angular-ui';" }}</docs-code-line>
   </li>
