--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import './app/ui/iwerk-angular-ui'
 
 html, body
   width: 100%
