docs(get-started): be more specific

--- a/projects/demo/src/app/welcome/welcome.component.html
+++ b/projects/demo/src/app/welcome/welcome.component.html
@@ -27,6 +27,7 @@
   </li>
   <li>
     2. Import the default styles in your angular.json or in your stylesheets.
+    <docs-code-line>{{ '@import "~iwerk-angular-ui/iwerk-angular-ui.css"' }}</docs-code-line>
   </li>
   <li>
     3. Import the modules you need to any of your modules
