feat(movable/handle): the handle has a iw-move-handle class

--- a/src/app/demo/movable-demo/movable-demo/movable-demo.component.html
+++ b/src/app/demo/movable-demo/movable-demo/movable-demo.component.html
@@ -7,6 +7,12 @@
 </div>
 
 <div class="area">
+  <div class="target" style="top: 20px; left: 40px;">
+    <div class="handle" iwMoveHandle>I'm a handle in a non-movable target :(</div>
+  </div>
+</div>
+
+<div class="area">
   <div class="target" iwMovable style="top: 20px; left: 40px;">
     <ng-container [ngComponentOutlet]="movableDemoContentComponent"></ng-container>
   </div>
