--- a/src/app/demo/popover/popover-demo/popover-demo.component.html
+++ b/src/app/demo/popover/popover-demo/popover-demo.component.html
@@ -67,7 +67,7 @@
 
 <h2>Horizontal</h2>
 
-<button (click)="isPopoverOpen5 = true">
+<button id="horizontal-e2e" (click)="isPopoverOpen5 = true">
   Click to open!
 
   <ng-template iwPopover 
